[workspace]
resolver = "3"
members = ["crates/tsck-derive","crates/rust-book", "crates/tsck", "crates/tsck-kee",  "crates/tsck-utils"]

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
flume = "0.12.0"
parking_lot = "0.12.5"
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "std"
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
winit = { version = "0.31.0-beta.2", default-features = false }
wry = { version = "0.54.1", default-features = false }
