[package]
name = "tsck-kee"
version = "0.1.0"
edition = "2024"

[[example]]
name = "tsck-kee"
path = "example/kee.rs"

[dependencies]
chrono.workspace = true
anyhow = "1.0"
flume = "0.11.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"
lazy_static = "1.5.0"
rodio = { version = "0.21.1", features = ["mp3"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145" }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
tsck-derive = {path="../tsck-derive"}
